# railway_system

./: .gitignore  CMakeLists.txt  README.md  model.c  model.h
lib/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
lib/imgui_setup/: CMakeLists.txt  imgui_setup.h
lib/sqlite3/: sqlite3.lib
src/: CMakelists.txt  config.ini  main.c  main.cpp
src/controler/: controler.cpp  controler.h
src/controller/: console.cpp  system_controller.c  system_controller.h  train_controller.c  train_controller.cpp  train_controller.h
src/entity/: date.cpp  date.h  entity.cpp  entity.h  order.h  train.h  train_data.h  window_rect.h
src/imgui_setup/: imgui_setup.cpp  imgui_setup.h
src/model/: order_model.c  order_model.h  train_model.c  train_model.h
src/text/: text.h
src/utils/: error.h  imgui_setup.cpp  util_funcs.cpp  util_funcs.h  utils.c  utils.h
src/view/: CMakeLists.txt  console_window.cpp  controller.cpp  controller.h  imgui_windows.cpp  imgui_windows.h  search_window.cpp  show_datas_window.cpp  system_controller.c  system_controller.h  system_view.h  tool.cpp  user_input_window.cpp  view.cpp  view.h
src/view/imgui_setup/: imgui_setup.cpp  imgui_setup.h
src/view/windows/: console_window.cpp  datas_window.cpp  filters_window.cpp  input_window.cpp
test/: CMakeLists.txt
test/test_controller/: test_controller.cpp
test/test_model/: test_train_model.cpp
test/test_table/: main.cpp
test/test_view/: CMakeLists.txt  main.cpp
test/test_view/train_controller_test/: train_controller.cpp  train_controller.h
test/train_controller_test/: system_controller.h
